--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node src/index.ts",
     "dev:w": "ts-node-dev --respawn ./src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node out/index.js",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore ."
   },
   "devDependencies": {
@@ -23,7 +23,6 @@
     "eslint": "^7.2.0"
   },
   "dependencies": {
-
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0"
   }
