--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,38 @@
 {
-    "compilerOptions": {
-      "target": "es2018",
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "lib": [
-        "es6",
-        "dom"
+  "compilerOptions": {
+    "target": "es2018",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "lib": [
+      "es6",
+      "dom"
+    ],
+    "esModuleInterop": true,
+    "rootDir": "./src",
+    "outDir": "./out",
+    "sourceMap": true,
+    "strict": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "baseUrl": ".",
+    "paths": {
+      "~/*": [
+        "./src/*"
       ],
-      "esModuleInterop": true,
-      "rootDir": "./src",
-      "outDir": "./out",
-      "sourceMap": true,
-      "strict": true,
-      "experimentalDecorators": true,
-      "emitDecoratorMetadata": true ,
-      "baseUrl": ".",
-      "paths": {
-        "~/*": [
-          "./*"
-        ],
-        "@/*": [
-          "./*"
-        ]
-      },
-      "types": [
-        "@types/node"
+      "@/*": [
+        "./src/*"
       ]
     },
-    "exclude": [
-      "node_modules",
-      "dist",
-      "**/*.spec.ts"
-    ],
-    "include": [
-      "src/**/*"
+    "types": [
+      "@types/node"
     ]
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "dist",
+    "**/*.spec.ts"
+  ],
+  "include": [
+    "src/**/*"
+  ]
+}
